:sparkles: Ajout page Saisie kms

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr-FR">
+
+<!-- Entête de la page -->
     <head>
-        <meta charset="UTF-8">    
-        <title>Paydal</title>
-    </head>
+        <meta charset="UTF-8">
+    <!-- Titre dze la page -->
+    <title>.:Paydal :: Saisie:.</title>
+    <!-- Description de l'encodage utilisé (pour les caractères accentués) -->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
     <body>
         <form action="ajoutKilo.php" method="POST">
             <div>
