--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- Entête de la page -->
     <head>
         <meta charset="UTF-8">
-    <!-- Titre dze la page -->
+    <!-- Titre de la page -->
     <title>.:Paydal :: Saisie:.</title>
     <!-- Description de l'encodage utilisé (pour les caractères accentués) -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
