--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     </head>
     <body>
         <form action="index.html">
-            Kilométrage total&nbsp;:0 km
-            <label for="kiloReal">Kilometrage réalisé&nbsp;:</label>
-            <input type="text" name="kiloReal" value="0">
-            <input type="submit" name="action" value="Ajouter">
+            <div>
+                Kilométrage total&nbsp;: 0 km
+            </div>
+            <div>
+                <label for="kiloReal">Kilometrage réalisé&nbsp;:</label>
+                <input type="text" name="kiloReal" value="0">
+                <input type="submit" name="action" value="Ajouter">
+            </div>
         </form>
     </body>
 </html>
